+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.6.3
==========================

*Release date: XX-XX-XXX*

Core and Builtins
-----------------

- Issue #5890: in subclasses of 'property' the __doc__ attribute was
  shadowed by classtype's, even if it was None.  property now
  inserts the __doc__ into the subclass instance __dict__.

- Issue #5724: (See also issue #4575.) Fix Py_IS_INFINITY macro to
  work correctly on x87 FPUs: it now forces its argument to double
  before testing for infinity.

- Issue #4971: Fix titlecase for characters that are their own
  titlecase, but not their own uppercase.

- Issue #5829: complex('1e-500') no longer raises an exception

- Issue #5787: object.__getattribute__(some_type, "__bases__") segfaulted on
  some builtin types.

- Issue #5283: Setting __class__ in __del__ caused a segfault.

- Issue #5759: float() didn't call __float__ on str subclasses.

- Issue #5108: Handle %s like %S and %R in PyUnicode_FromFormatV(): Call
  PyUnicode_DecodeUTF8() once, remember the result and output it in a second
  step. This avoids problems with counting UTF-8 bytes that ignores the effect
  of using the replace error handler in PyUnicode_DecodeUTF8().

Library
-------

- Issue #5971: StreamHandler.handleError now swallows IOErrors which occur when
  trying to print a traceback.

- Issue 5955: aifc's close method did not close the file it wrapped,
  now it does.  This also means getfp method now returns the real fp.

- Issue #4875: On win32, ctypes.util.find_library does no longer
  return directories.

- Issue #5692: In :class:`zipfile.Zipfile`, fix wrong path calculation when
  extracting a file to the root directory.

- Issue #2245: aifc now skips chunk types it doesn't recognize, per spec.

- Issue #4305: ctypes should now build again on mipsel-linux-gnu

- Issue #5853: calling a function of the mimetypes module from several threads